--- a/index.html
+++ b/index.html
@@ -1,202 +1,130 @@
 <!DOCTYPE html>
 <html>
-<head>
+	<head>
 
-	<meta charset="utf-8">
-	<title>2회차 HTML 강의</title>
+		<meta charset="utf-8">
+		
 
-	<style>
-		tr, td, th {
-			border:  solid 1px #000000;
-		}
-
-		span {
-			width:  300px;
-			height:  300px;
-			background-color: yellow;
-
-			margin-top: 100px;
-			margin-bottom: 100px;
+		<!--
+		<style>
+			h1 {
+				color:  red;
 			}
+		</style>
+		-->
+	<link rel=link rel="preconnect" href="https://fonts.googleapis.com">
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">"
+	<link rel="stylesheet" type="text/css" href="style.css">
 
-		h1 {
-			width: 300px;
-			height: 300px;
-			background-color: yellow;
+	</head>
+	<body>
+	
+		<!--
+		<h1 style="background-color: pink;">Hello World</h1>
+		-->
 
-			margin-top: 100px;
-			margin-bottom: 100px;
-
-			padding-top: 100px;
-			padding-bottom: 100px;
-		}ß
-
-	</style>
-
-</head> 
-<body>
-
-	<!--
-	<form method="post">
-
-		<label for="name">이름</label>
-		<input type="text" id="name" placeholder="이름을 입력하세요." required
-			minlength="2" maxlength="8">
-
-		<label for ="mail">이메일</label>
-		<input type="email" placeholder="이메일을 입력하세요." id="mail" required>
-
-		<label for="pw">비밀번호</label>
-		<input type="password" placeholder="최소 6글자, 최대 12글자" id="pw" required 
-			minlength="10" maxlength="15">
-
-
-		<label for="num">숫자</label>
-		<input type="number" id="num" placeholder="숫자만 입력"
-		min="10" max="40" step="5">
-
-		<label for="upload">파일 업로드</label>
-		<input type="file" id="upload" accept="image/png, image/jpg">
-
-		<button type="submit">제출</button>
-
-	</form>
-	-->
-
-	<!--
-	<label for="n1">한국</label>
-	<input type="checkbox" id="n1" name="country" value="한국">
-	<label for="n2">일본</label>
-	<input type="checkbox" id="n2" name="country" value="일본">
-	<label for="n3">중국</label>
-	<input type="checkbox" id="n3" name="country" value="중국"
-	-->
-
-	<!--
-	<label for="n1">한국</label>
-	<input type="radio" id="n1" name="country" value="한국" checked>
-	<label for="n2">일본</label>
-	<input type="radio" id="n2" name="country" value="일본">
-	<label for="n3">중국</label>
-	<input type="radio" id="n3" name="country" value="중국"
-	-->
-
-	<!--
-	<label for ="content"> 문의내용</label>
-	<textarea id="content" cols="40" rows="8"></textarea>
-	-->
-
-	<!--
-	<select name="job">
-		<option selected disabled>직업을 선택해 주세요.</option>
-		<option value="학생">학생</option>
-		<option value="회사원">회사원</option>
-		<option value="기타">기타</option>
-	</select>
-	-->
 
 <!--
-	<table>
-		<caption>상품 정보</caption>
-		<thead>
-			<tr>
-				<th>상품</th>
-				<th>색상</th>
-				<th>가격</th>
-			</tr>
-		</thead>
-
-		<tbody>
-			<tr>
-				<td>맥북 프로 16인치</td>
-				<td>그레이</td>
-				<td>3,000원</td>
-			</tr>
-			<tr>
-				<td rowspan="2">아이패드 프로 12인치</td>
-				<td>레드</td>
-				<td rowspan="2">1,000원</td>
-			</tr>
-			<tr>
-			
-				<td>블루</td>
-			
-			</tr>
-		</tbody>
-
-		<tfoot>
-			<tr>
-				<td colspan="2">총 가격</td>
-				<td>5,000원</td>
-			</tr>
-		</tfoot>
-	</table>
-	-->
-
-
-	<!--
 	<header>
-		<h1>
-			<a href="#">
-				<img>
-			</a>
-		</h1>
+		<h1>header h1</h1>
+		<p>header p</p>
+		<a href="#">네이버</a>
 
-		<nav>
-			<ul>
-				<li><a href="#">메뉴1</a></li>
-				<li><a href="#">메뉴2</a></li>
-				<li><a href="#">메뉴3</a></li>
-			</ul>
-		</nav>
+	</header>
+	<footer>
+		<h1>footer h1</h1>
+		<p>footer p</p>
+	</footer>
+-->
+
+
+<!--
+	<h1>Hello World</h1>
+	<h2 id="test1">Nice to meet you</h2>
+	<h3 class="test2">Welcome</h3>
+
+	<input type="text" placeholder="이름">
+	<input type="password" placeholder="비밀번호">
+-->
+
+<!--
+	<h2 id="color-1 font-size-1">ID 선택자</h2>
+	<h3 class="bg-1 font-size-1">Class 선택자</h3>
+
+
+	<p class="bg-1">Welcome</p>
+
+	<h4 id="color-1"></h4>
+-->
+
+
+<!--
+	<header id="intro">
+		<div class="container">
+			<h2>header h2</h2>
+			<p>header p</p>
+		</div>
 	</header>
 
+	<p>Out p</p>
+-->
+
+<!-- style 속성 > id > class > tag -->
+<!--
+	<h1 id="color-2" class="color-1">Hello World</h1>
+-->
+
+<!--
+	<header id="intro">
+		<div class="container">
+			<h1>header h1</h1>
+		</div>
+	</header>
+-->
 
 
-	<main role ="main">
-		
-		<section>
-			<h2>Service</h2>
-		</section>
+<!--
+	<div>
+		<h1>Nice</h1>
+		<ul>
+			<li>메뉴1</li>
+			<li>메뉴2</li>
+		</ul>
+	</div>
+-->
 
-		<section>
-			<h2>Portfolio</h2>
-		</section>
+<!--
+	<div id="bg"></div>
 
-		<article>
-			<h2>Article title</h2>
-			<p>Nice to meet you Nice to meet you Nice to meet you Nice to meet you Nice to meet you</p>
-		</article>
-	</main>
+	<img src="icon.png" width="100px" height="50px"> 
 
+-->
 
-	<aside></aside>
+<!--
+	<a href="https://www.naver.com">네이버</a>
 
-	<footer></footer>
+	<input type="text">
+-->
 
-	<div></div>
-	-->
+<!--
+<ul>
+	<li>메뉴1</li>
+	<li>메뉴2</li>
+	<li>메뉴3</li>
+	<li>메뉴4</li>
+	<li>메뉴5</li>
+	<li>메뉴6</li>
+</ul>
+-->
 
-
-
-	<!-- Inline / Block -->
-	<span>Inline</span>
-	<span>Inline</span>
-	<span>Inline</span>
-
-
-	<h1>Block</h1>
-	<h1>Block</h1>
-	<h1>Block</h1>
-
-
-
-
-
-
-
-
-
+<!--
+	<ul>
+		<li>로그인</li>
+		<li>회원가입</li>
+		<li>회사소개</li>
+		<li>고객센터</li>
+	</ul>
+-->
 
 
 
@@ -206,5 +134,21 @@
 
 
 
-</body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	</body>
 </html>
